@@ -63,7 +63,8 @@
 	define("MAP_LABEL_TYPE_HOSTLABEL",0);
 	define("MAP_LABEL_TYPE_IP",1);
 	define("MAP_LABEL_TYPE_HOSTNAME",2);
-	define("MAP_LABEL_TYPE_NOTHING",3);
+	define("MAP_LABEL_TYPE_STATUS",3);
+	define("MAP_LABEL_TYPE_NOTHING",4);
 
 	define("ITEM_TYPE_ZABBIX",0);
 	define("ITEM_TYPE_SNMPV1",1);
